feat:  add donation section - Add Ko-fi support badges and a dedicated support section to README.md. - Update English and Spanish language strings to include the donation message.

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1503,8 +1503,9 @@ msgctxt "#90021"
 msgid "TV Calendar"
 msgstr ""
 
+
 msgctxt "#90022"
-msgid "If you enjoy using Jacktook and appreciate the time and effort that goes into developing this addon, please consider supporting me with a contribution:"
+msgid "If you enjoy using Jacktook and want to support its development, you can buy me a coffee! Your support helps keep the project active and enables future improvements:"
 msgstr ""
 
 msgctxt "#90023"
