--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -1476,8 +1476,8 @@ msgid "TV Calendar"
 msgstr "Calendario de TV"
 
 msgctxt "#90022"
-msgid "If you enjoy using Jacktook and appreciate the time and effort that goes into developing this addon, please consider supporting me with a contribution:"
-msgstr "Si disfrutas usando Jacktook y valoras el tiempo y esfuerzo que se dedica al desarrollo de este addon, considera apoyarme con una contribución en:"
+msgid "If you enjoy using Jacktook and want to support its development, you can buy me a coffee! Your support helps keep the project active and enables future improvements:"
+msgstr "Si disfrutas usando Jacktook y quieres apoyar su desarrollo, puedes comprarme un café! Tu apoyo ayuda a mantener el proyecto activo y habilita mejoras futuras:"
 
 msgctxt "#90023"
 msgid "Support Jacktook"
