feat(stremio): add manual addon availability ping and filtering
This commit introduces a new feature to ping Stremio addons and filter the selection list based on their reachability.

Key changes:
- Added 'Ping Addons' action button in Stremio settings.
- Implemented concurrent pinging of 'manifest.json' endpoints in helpers.py.
- Refactored addon_selection.py to extract helper functions and reduce code duplication.
- Added a summary dialog to display the number of reachable and unreachable addons after filtering.
- Updated router.py to handle the new filtered selection action.
- Provided English and Spanish localization for the new strings.

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -2053,3 +2053,11 @@ msgstr ""
 msgctxt "#32306"
 msgid "Reset Filter"
 msgstr ""
+
+msgctxt "#30930"
+msgid "Ping Addons"
+msgstr "Ping Addons"
+
+msgctxt "#30931"
+msgid "Check availability of addons and show only reachable ones"
+msgstr "Check availability of addons and show only reachable ones"
