--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -1989,3 +1989,11 @@ msgstr "Filtrar por Debrid"
 msgctxt "#32306"
 msgid "Reset Filter"
 msgstr "Restablecer Filtro"
+
+msgctxt "#30930"
+msgid "Ping Addons"
+msgstr "Ping Addons"
+
+msgctxt "#30931"
+msgid "Check availability of addons and show only reachable ones"
+msgstr "Comprueba la disponibilidad de los addons y muestra solo los accesibles"
