fix: Rename 'play_media' helper to 'kodi_play_media' to avoid conflicts with routing actions.
- Update context menus and translations for 'Source Select'.

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1832,7 +1832,7 @@ msgid "History cleared"
 msgstr ""
 
 msgctxt "#90115"
-msgid "Sources selection"
+msgid "Source Select"
 msgstr ""
 
 msgctxt "#90116"
