feat: add new anime categories
- Added new anime categories: Top Rated (TMDB), Trending Recent and Favorited (Trakt)
- Fixed Trakt anime API to support both TV and Movie modes
- Fixed TMDB anime year search to use correct parameters for movies
- Enabled Trakt anime categories in the Anime Movies navigation menu
- Removed search item from the top of anime menus for a cleaner UI
- Added Spanish localization for new categories
- Fixed item selection in anime genres and years menus

--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -1962,6 +1962,10 @@ msgctxt "#90153"
 msgid "Stremio: Torrentio"
 msgstr "Stremio: Torrentio"
 
+msgctxt "#90154"
+msgid "Trending Recent"
+msgstr "Tendencias Recientes"
+
 msgctxt "#32300"
 msgid "Filter by Quality"
 msgstr "Filtrar por Calidad"
