--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -2026,6 +2026,10 @@ msgctxt "#90153"
 msgid "Stremio: Torrentio"
 msgstr "Stremio: Torrentio"
 
+msgctxt "#90154"
+msgid "Trending Recent"
+msgstr ""
+
 msgctxt "#32300"
 msgid "Filter by Quality"
 msgstr ""
