feat(tmdb): add 'Airing Today' section for TV shows
Add a new 'Airing Today' section to the TV shows menu. This implementation uses TMDB's discover API (filtered by today's date) to ensure streaming releases (like those on Netflix) are included, which the standard airing_today endpoint often misses. It also excludes talk shows, news, and reality programs to focus on scripted series.

--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -1733,6 +1733,10 @@ msgctxt "#90085"
 msgid "Include TV show Specials"
 msgstr "Incluir Especiales en shows de TV"
 
+msgctxt "#90086"
+msgid "Airing Today"
+msgstr "En Emisión Hoy"
+
 msgctxt "#90099"
 msgid "Filter by Source Type"
 msgstr "Filtrar por tipo de fuente"
