--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -1762,6 +1762,10 @@ msgctxt "#90085"
 msgid "Include TV show Specials"
 msgstr ""
 
+msgctxt "#90086"
+msgid "Airing Today"
+msgstr ""
+
 msgctxt "#90099"
 msgid "Filter by Source Type"
 msgstr ""
