feat(navigation): refactor menus and add Library/Continue Watching
Refactored the menu system to be data-driven and added new features.\n\n- Implemented Continue Watching with auto-persistence.\n- Added Library management for shows and movies.\n- Added context menu actions for Library and Continue Watching.\n- Fixed various bugs and improved menu responsiveness by disabling disk cache.

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -2097,3 +2097,31 @@ msgstr "Skip Intro"
 msgctxt "#90161"
 msgid "Skip Recap"
 msgstr "Skip Recap"
+
+msgctxt "#90200"
+msgid "Continue Watching"
+msgstr "Continue Watching"
+
+msgctxt "#90201"
+msgid "Library"
+msgstr "Library"
+
+msgctxt "#90202"
+msgid "My Shows"
+msgstr "My Shows"
+
+msgctxt "#90203"
+msgid "My Movies"
+msgstr "My Movies"
+
+msgctxt "#90204"
+msgid "Remove from Library"
+msgstr "Remove from Library"
+
+msgctxt "#90205"
+msgid "Add to Library"
+msgstr "Add to Library"
+
+msgctxt "#90206"
+msgid "Remove"
+msgstr "Remove"
