feat(ui): unify search and direct search into a single sub-menu
This change merges the main menu's 'Search' and 'Direct Search' entries into a single 'Search' sub-menu to reduce clutter.
- Added a new 'search_menu' sub-menu with inline history for both TMDb and scraper-based searches.
- Added 'clear_search_history' functionality with proper routing.
- Improved search history tracking for TMDb searches and fixed navigation behavior.
- Implemented robust deduplication in the caching layer to prevent history duplicates.
- Localized new strings in English and Spanish; updated Portuguese translations.
- Cleaned up router imports.

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -224,7 +224,7 @@ msgid "Search on AniList:"
 msgstr ""
 
 msgctxt "#30243"
-msgid "Search for torrents:"
+msgid "Search for a keyword:"
 msgstr ""
 
 msgctxt "#30244"
@@ -2133,4 +2133,21 @@ msgstr "Add to Library"
 msgctxt "#90206"
 msgid "Remove"
 msgstr "Remove"
+
+msgctxt "#90207"
+msgid "Search Movies & TV"
+msgstr ""
+
+msgctxt "#90208"
+msgid "Recent Searches"
+msgstr ""
+
+msgctxt "#90209"
+msgid "Recent Direct Searches"
+msgstr ""
+
+msgctxt "#90210"
+msgid "Clear All Search History"
+msgstr ""
+
 
