feat(stremio): configurable bypass for native filters on selected Stremio addons
This feature allows users to select specific Stremio addons that should bypass Jacktook's native filtering

- Added a multi-select dialog to choose addons for filter bypassing.
- Relocated bypass settings to the 'Filters' tab for better accessibility.
- Replaced the static 'BYPASS_FILTER_ADDONS' constant with a dynamic, settings-based list.
- Fixed 'Super quick play' by using resilient cache keys (supporting original_id and imdb_id).
- Provided English and Spanish localizations.

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -2150,4 +2150,18 @@ msgctxt "#90210"
 msgid "Clear All Search History"
 msgstr ""
 
+msgctxt "#90211"
+msgid "Bypass Stremio Addons Native Sorting"
+msgstr ""
 
+msgctxt "#90212"
+msgid "If enabled, addons specified in BYPASS_FILTER_ADDONS won't have their results re-ordered or filtered by Jacktook's native quality and size thresholds."
+msgstr ""
+
+msgctxt "#90213"
+msgid "Select Bypassed Addons"
+msgstr ""
+
+msgctxt "#90214"
+msgid "Select which Stremio addons bypass Jacktook's native size and quality filtering."
+msgstr ""
