feat(maintenance): add downgrade addon version functionality
This feature allows users to revert the addon to a previous version directly from the settings. It fetches available versions from the GitHub repository API and presents a selection dialog.

--- a/resources/language/English/strings.po
+++ b/resources/language/English/strings.po
@@ -2165,3 +2165,7 @@ msgstr ""
 msgctxt "#90214"
 msgid "Select which Stremio addons bypass Jacktook's native size and quality filtering."
 msgstr ""
+
+msgctxt "#90215"
+msgid "Downgrade"
+msgstr ""
