--- a/resources/language/Portuguese (Brazil)/strings.po
+++ b/resources/language/Portuguese (Brazil)/strings.po
@@ -721,3 +721,7 @@ msgstr "Adicionar à Biblioteca"
 msgctxt "#90206"
 msgid "Remove"
 msgstr "Remover"
+
+msgctxt "#90215"
+msgid "Downgrade"
+msgstr "Reverter"
