--- a/resources/language/Spanish/strings.po
+++ b/resources/language/Spanish/strings.po
@@ -40,8 +40,8 @@ msgid "Jackett Configuration:"
 msgstr "Configuracion de Jackett"
 
 msgctxt "#30023"
-msgid "API Key"
-msgstr "Clave API"
+msgid "Client Key"
+msgstr "Clave de Cliente"
 
 msgctxt "#30025"
 msgid "Host"
@@ -76,8 +76,8 @@ msgid "Prowlarr Configuration:"
 msgstr "Configuracion de Prowlarr"
 
 msgctxt "#30051"
-msgid "Api Key"
-msgstr "Clave Api"
+msgid "Client Key"
+msgstr "Clave de Cliente"
 
 msgctxt "#30052"
 msgid "Host"
@@ -100,8 +100,8 @@ msgid "TMDB Configuration"
 msgstr "Configuracion de TMDB"
 
 msgctxt "#30103"
-msgid "API Key"
-msgstr "API Key"
+msgid "Client Key"
+msgstr "Clave de Cliente"
 
 msgctxt "#30104"
 msgid "Clear tmdb cache"
@@ -160,8 +160,8 @@ msgid "Client ID"
 msgstr "Client ID"
 
 msgctxt "#30221"
-msgid "No API key provided for"
-msgstr "API key no provista para"
+msgid "No Client Key provided for"
+msgstr "Clave de Cliente no provista para"
 
 msgctxt "#30223"
 msgid "You need to configure"
@@ -1048,8 +1048,8 @@ msgid "Display torrents not yet cached on your debrid service."
 msgstr "Mostrar torrents que aún no están en caché en tu servicio debrid."
 
 msgctxt "#30808"
-msgid "Fanart.tv API client ID (for artwork)."
-msgstr "ID de cliente de la API de Fanart.tv (para imágenes)."
+msgid "Fanart.tv Client Key (for artwork)."
+msgstr "Clave de Cliente de Fanart.tv (para imágenes)."
 
 msgctxt "#30809"
 msgid "Improve performance by caching metadata."
@@ -1072,8 +1072,8 @@ msgid "Hours before cached data is automatically refreshed (e.g., 24)."
 msgstr "Horas antes de que los datos en caché se actualicen automáticamente (ej. 24)."
 
 msgctxt "#30814"
-msgid "Premiumize API token (get from account page)."
-msgstr "Token de API de Premiumize (obtén en la página de la cuenta)."
+msgid "Premiumize Client Token (get from account page)."
+msgstr "Token de Cliente de Premiumize (obtén en la página de la cuenta)."
 
 msgctxt "#30815"
 msgid "Jackett server URL (e.g., http://localhost)."
@@ -1100,8 +1100,8 @@ msgid "Seconds before Zilean requests time out (e.g., 30)."
 msgstr "Segundos antes de que las solicitudes a Zilean expiren (ej. 30)."
 
 msgctxt "#30821"
-msgid "Your Jackett API key (found in dashboard)."
-msgstr "Tu clave API de Jackett (se encuentra en el panel)."
+msgid "Your Jackett Client Key (found in dashboard)."
+msgstr "Tu Clave de Cliente de Jackett (se encuentra en el panel)."
 
 msgctxt "#30822"
 msgid "Sort results by criteria (e.g., 'date', 'title', 'size')."
@@ -1128,8 +1128,8 @@ msgid "Jackgram server URL (e.g., http://localhost:9117)."
 msgstr "URL del servidor Jackgram (ej. http://localhost:9117)."
 
 msgctxt "#30828"
-msgid "Debrider API key for authentication."
-msgstr "Clave API de Debrider para autenticación."
+msgid "Debrider Client Key for authentication."
+msgstr "Clave de Cliente de Debrider para autenticación."
 
 msgctxt "#30829"
 msgid "Delay (in seconds) before next episode dialog appears (e.g., 10)."
@@ -1144,8 +1144,8 @@ msgid "Enable EasyDebrid cached torrent support."
 msgstr "Habilitar soporte para torrents en caché de EasyDebrid."
 
 msgctxt "#30832"
-msgid "Torbox API token (found in account settings)."
-msgstr "Token de API de Torbox (se encuentra en la configuración de la cuenta)."
+msgid "Torbox Client Token (found in account settings)."
+msgstr "Token de Cliente de Torbox (se encuentra en la configuración de la cuenta)."
 
 msgctxt "#30833"
 msgid "Trakt refresh token (auto-managed)."
@@ -1192,8 +1192,8 @@ msgid "Enable Torbox.de cloud torrent integration."
 msgstr "Habilitar la integración de torrents en la nube de Torbox.de."
 
 msgctxt "#30844"
-msgid "Trakt API access token (auto-filled after auth)."
-msgstr "Token de acceso a la API de Trakt (se autocompleta después de la autorización)."
+msgid "Trakt Access Token (auto-filled after auth)."
+msgstr "Token de acceso de Trakt (se autocompleta después de la autorización)."
 
 msgctxt "#30845"
 msgid "Link Premiumize.me account to add-on."
@@ -1208,8 +1208,8 @@ msgid "Click to delete all cached data immediately."
 msgstr "Haz clic para eliminar todos los datos en caché inmediatamente."
 
 msgctxt "#30848"
-msgid "Real-Debrid API token (auto-filled after auth)."
-msgstr "Token de API de Real-Debrid (se autocompleta después de la autorización)."
+msgid "Real-Debrid Client Token (auto-filled after auth)."
+msgstr "Token de Cliente de Real-Debrid (se autocompleta después de la autorización)."
 
 msgctxt "#30849"
 msgid "Enable Jackett torrent proxy support."
@@ -1232,8 +1232,8 @@ msgid "Revoke Real-Debrid account access."
 msgstr "Revocar el acceso a la cuenta Real-Debrid."
 
 msgctxt "#30854"
-msgid "Prowlarr API key (found in Settings > General)."
-msgstr "Clave API de Prowlarr (se encuentra en Configuración > General)."
+msgid "Prowlarr Client Key (found in Settings > General)."
+msgstr "Clave de Cliente de Prowlarr (se encuentra en Configuración > General)."
 
 msgctxt "#30855"
 msgid "Trakt.tv username (auto-populated after auth)."
@@ -1248,8 +1248,8 @@ msgid "Enable Zilean integration for metadata fetching."
 msgstr "Habilitar la integración de Zilean para obtener metadatos."
 
 msgctxt "#30858"
-msgid "Your API Key (required for metadata)"
-msgstr "Tu clave API de TMDB (necesaria para metadatos)."
+msgid "Your Client Key (required for metadata)"
+msgstr "Tu Clave de Cliente de TMDB (necesaria para metadatos)."
 
 msgctxt "#30859"
 msgid "Enable Burst mode for accelerated searches."
@@ -1376,8 +1376,8 @@ msgid "Deepl Enabled"
 msgstr "Deepl habilitado"
 
 msgctxt "#30890"
-msgid "Deepl Api key"
-msgstr "Clave API de Deepl"
+msgid "Deepl Client Key"
+msgstr "Clave de Cliente de Deepl"
 
 msgctxt "#30891"
 msgid "Translator Configuration"
@@ -2140,3 +2140,15 @@ msgstr "Aviso de Volumen Alto"
 msgctxt "#90221"
 msgid "Volumen alto detectado. Ajustando al %s%% por seguridad."
 msgstr "Volumen alto detectado. Ajustando al %s%% por seguridad."
+
+msgctxt "#90222"
+msgid "Fanart.tv Configuration"
+msgstr "Configuración de Fanart.tv"
+
+msgctxt "#90223"
+msgid "Client Key"
+msgstr "Clave de Cliente"
+
+msgctxt "#90224"
+msgid "Your personal Fanart.tv client key for higher quality assets."
+msgstr "Introduce tu Clave de Cliente personal de Fanart.tv para obtener mejores resultados y mayor velocidad (opcional)."
